apps/api/deployment_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: griz
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: griz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      volumes:
        - name: nas-volume
          persistentVolumeClaim:
            claimName: api-pvc

      containers:
        - name: api
          image: ghcr.io/ditmanson/api:v1.0.1
          command: ["/env/bin/gunicorn"]
          args: ["--bind", ":8000", "--workers", "2", "api.wsgi"]
          ports:
            - containerPort: 8000
          # env:
          #   - name: PGSERVICEFILE
          #     value: "/.pg_service.conf"
          volumeMounts:
            - name: nas-volume
              mountPath: /app/static
